Fix responsiveness for truncated logo image in mobile version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,10 +60,19 @@ h4 {
     font-size: 120%;
     letter-spacing: 2px;
     padding-left: 30px;
+    
 }
+
+/* nav {
+    overflow: hidden;
+    position: sticky;
+    top: 0; 
+} */
+
 #menu li {
     list-style-type: none;
     margin: 50px 5px 0 5px;
+    
 }
 #menu a {
     text-decoration: none;
@@ -80,6 +89,7 @@ h4 {
     height: 500px;
     width: 100%;
     
+    
 }
 #cover-text h2, #cover-text h3 {
     color: #0E540E;
@@ -89,6 +99,9 @@ h4 {
     width: 100%;
     margin-top: 50px;
     background: url(../images/ambu1.jpg) no-repeat center center;
+    background-size: contain;
+  
+    
 }
 #cover-text {
     position: absolute;
@@ -376,7 +389,7 @@ button:hover {
 
         
     }
-    
+
     
     .right-about-heading {
         
@@ -412,31 +425,31 @@ button:hover {
     }
 
 
-#cirlcle-cover-bg {
+    #cirlcle-cover-bg {
     width: 300px;
     margin: 0 auto;
     flex-direction: column;
-    
-}
 
-#staff {
+    }
+
+    #staff {
     width: 100%;
     clear: both;
     height: 150px;
     font-size: 30px;
-    
-    
-}
 
-#staff-div {
+
+    }
+
+    #staff-div {
     flex-direction: column;
     margin: 0 auto;
-    
-}
 
-.box {
+    }
+
+    .box {
     max-width: 500px;
     margin: 0 30px;
-}
+    }
 
 }
